--- a/pagetwo.html
+++ b/pagetwo.html
@@ -19,7 +19,7 @@
     <main>
         <h2>My Study Abroad Experience</h2>
         
-        <img src="https://www.google.com/imgres?q=LSE&imgurl=https%3A%2F%2Fyt3.googleusercontent.com%2Fjprc2k0Y4rGti6ers15E3uSIXEdgzEuwzXNXjAAr0t8ErTJmfh40UoDClkHyJbMBX9IKse13JA%3Ds900-c-k-c0x00ffffff-no-rj&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fuser%2Flsewebsite&docid=1fIh7lOnpZEDKM&tbnid=HIKlimr6L4P9cM&vet=12ahUKEwjptJGghJCMAxXeEFkFHf1oDxgQM3oECGkQAA..i&w=900&h=900&hcb=2&ved=2ahUKEwjptJGghJCMAxXeEFkFHf1oDxgQM3oECGkQAA">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwqq5Ru3K7LJtf_5dnjl25nDS-04Pgqi8Z4Q&s">
         
         <div id="main">
             <p>My summer abroad in Europe was truly an amazing experience. I took a course at London School of Economics, Real Estate Finance. I really enjoyed the class, it was stuff I found very interesting to learn about. I also really liked the school and teaching structure. However, since it was a summer class, we had 3 hour long classes every day and a recitation after, so it was a little draining.</p>
